# SPDX-FileCopyrightText: 2022 Jeff Epler for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[metadata]
name = a2woz
author = Jeff Epler for Adafruit Industries
author_email = jeff@adafruit.com
description = Visualize floppy disk flux patterns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adafruit/a2woz
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =.
packages =
    a2woz
    a2woz.loggers
    a2woz.util
python_requires = >=3.9
install_requires =

[options.entry_points]
console_scripts =
    a2woz = a2woz.__main__:main
